Add docker image for Robocup simulation (#496)
Co-authored-by: Yosiah de Koeyer <yosiahdekoeyer@gmail.com>
Co-authored-by: Alex Biddulph <c3124185@uon.edu.au>
Co-authored-by: Kip Hamiltons <48076495+KipHamiltons@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,11 @@ packer/build.pwi
 *.tdo
 *TSWLatexianTemp*
 
+# Webots container building stuff
+docker/nugus_sim/binaries
+docker/nugus_sim/toolchain
+robocup-logs
+
 # Tests
 tests_output/
 
