--- a/module/input/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/SensorFilter.yaml
@@ -6,11 +6,11 @@ buttons:
 foot_down:
   method: FSR
   known_methods:
-    - name: FSR
-      certainty_threshold: 30
-    - name: Z_HEIGHT
+    - name: FSR # Literal FSR
+      certainty_threshold: 30 # Webots uses a bool sensor, this could be anything > 0. Normal robot uses FSR which is non bool
+    - name: Z_HEIGHT # This uses the difference in Z height of the feet
       certainty_threshold: 0.01 # Height difference of the Z for the Z height method
-    - name: LOAD
+    - name: LOAD # This uses the loads from the servos through a NN
       noise_factor: 1e-4
       certainty_threshold: 0.5
       uncertainty_threshold: 0.5
