--- a/module/motion/ScriptEngine/data/scripts/webots/KickLeft.yaml
+++ b/module/motion/ScriptEngine/data/scripts/webots/KickLeft.yaml
@@ -41,15 +41,15 @@
       gain: 30
       torque: 100
     - id: R_ANKLE_PITCH
-      position: -0.532421291
+      position: -0.600000024
       gain: 30
       torque: 100
     - id: L_ANKLE_PITCH
-      position: -0.556971014
+      position: -0.600000024
       gain: 30
       torque: 100
     - id: R_ANKLE_ROLL
-      position: 0.154969901
+      position: 0.119999997
       gain: 30
       torque: 100
     - id: L_ANKLE_ROLL
@@ -147,14 +147,14 @@
       gain: 30
       torque: 100
     - id: L_SHOULDER_ROLL
-      position: 0.312816709
+      position: 0.349999994
       gain: 30
       torque: 100
     - id: R_SHOULDER_ROLL
-      position: -0.309747994
+      position: -0.400000006
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 500
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -173,7 +173,7 @@
       gain: 20
       torque: 100
     - id: L_KNEE
-      position: 0.294500411
+      position: 0.256000012
       gain: 20
       torque: 100
     - id: L_HIP_PITCH
@@ -197,15 +197,15 @@
       gain: 20
       torque: 100
     - id: R_HIP_ROLL
-      position: 0
+      position: 0.0500000007
       gain: 20
       torque: 100
     - id: L_HIP_ROLL
-      position: 0.191794395
+      position: 0.150000006
       gain: 20
       torque: 100
     - id: L_ANKLE_ROLL
-      position: -0.452634811
+      position: -0.300000012
       gain: 20
       torque: 100
     - id: R_ELBOW
@@ -213,7 +213,7 @@
       gain: 20
       torque: 100
     - id: R_SHOULDER_ROLL
-      position: -0.314351112
+      position: -0.400000006
       gain: 20
       torque: 100
     - id: L_ELBOW
@@ -221,14 +221,14 @@
       gain: 20
       torque: 100
     - id: L_SHOULDER_PITCH
-      position: 2.1693871
+      position: 1.99000001
       gain: 20
       torque: 100
     - id: L_SHOULDER_ROLL
-      position: 0.727092683
+      position: 0.449999988
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 500
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -271,7 +271,7 @@
       gain: 30
       torque: 100
     - id: R_ANKLE_ROLL
-      position: -0.217878506
+      position: -0.129999995
       gain: 30
       torque: 100
     - id: R_SHOULDER_PITCH
@@ -283,7 +283,7 @@
       gain: 30
       torque: 100
     - id: R_SHOULDER_ROLL
-      position: -0.242236406
+      position: -0.400000006
       gain: 30
       torque: 100
     - id: R_ELBOW
@@ -295,14 +295,88 @@
       gain: 30
       torque: 100
     - id: L_SHOULDER_ROLL
-      position: 0.836031914
+      position: 1
       gain: 30
       torque: 100
     - id: R_HIP_ROLL
       position: 0.100000001
       gain: 30
       torque: 100
-- duration: 200
+- duration: 1000
+  targets:
+    - id: L_HIP_YAW
+      position: 0.0292397309
+      gain: 20
+      torque: 100
+    - id: R_HIP_YAW
+      position: -0.0292397309
+      gain: 20
+      torque: 100
+    - id: R_ANKLE_PITCH
+      position: -0.239359394
+      gain: 20
+      torque: 100
+    - id: R_KNEE
+      position: 0.256141514
+      gain: 20
+      torque: 100
+    - id: R_HIP_PITCH
+      position: 0
+      gain: 20
+      torque: 100
+    - id: L_ANKLE_ROLL
+      position: -0.378985792
+      gain: 20
+      torque: 100
+    - id: L_HIP_ROLL
+      position: 0.300000012
+      gain: 30
+      torque: 100
+    - id: L_KNEE
+      position: 0.757875681
+      gain: 30
+      torque: 100
+    - id: L_HIP_PITCH
+      position: 0.200000003
+      gain: 30
+      torque: 100
+    - id: L_ANKLE_PITCH
+      position: -0.649999976
+      gain: 30
+      torque: 100
+    - id: R_ANKLE_ROLL
+      position: -0.129999995
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_PITCH
+      position: 1.66765201
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_PITCH
+      position: 2.41641808
+      gain: 30
+      torque: 100
+    - id: R_SHOULDER_ROLL
+      position: -0.400000006
+      gain: 30
+      torque: 100
+    - id: R_ELBOW
+      position: -0.957437813
+      gain: 30
+      torque: 100
+    - id: L_ELBOW
+      position: -0.997331023
+      gain: 30
+      torque: 100
+    - id: L_SHOULDER_ROLL
+      position: 0.800000012
+      gain: 30
+      torque: 100
+    - id: R_HIP_ROLL
+      position: 0.100000001
+      gain: 30
+      torque: 100
+- duration: 120
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -325,11 +399,11 @@
       gain: 20
       torque: 100
     - id: R_ANKLE_ROLL
-      position: -0.216344103
+      position: -0.129999995
       gain: 20
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.942094207
+      position: -1
       gain: 30
       torque: 100
     - id: R_SHOULDER_PITCH
@@ -365,7 +439,7 @@
       gain: 30
       torque: 100
     - id: L_KNEE
-      position: 0.699999988
+      position: 0.850000024
       gain: 30
       torque: 100
     - id: L_HIP_ROLL
@@ -377,14 +451,14 @@
       gain: 30
       torque: 100
     - id: L_SHOULDER_ROLL
-      position: 0.642703116
+      position: 0.850000024
       gain: 30
       torque: 100
     - id: R_HIP_ROLL
       position: -0.100000001
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 200
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -435,7 +509,7 @@
       gain: 30
       torque: 100
     - id: R_ANKLE_ROLL
-      position: -0.176450893
+      position: -0.129999995
       gain: 30
       torque: 100
     - id: L_HIP_PITCH
@@ -458,7 +532,7 @@
       position: 2.13563108
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 300
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -532,7 +606,7 @@
       position: -0.289801389
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 500
   targets:
     - id: L_HIP_YAW
       position: 0.0292397309
@@ -606,7 +680,7 @@
       position: -0.639826179
       gain: 30
       torque: 100
-- duration: 1000
+- duration: 500
   targets:
     - id: HEAD_YAW
       position: -0.00153435499
@@ -633,11 +707,11 @@
       gain: 30
       torque: 100
     - id: R_HIP_PITCH
-      position: -0.400000006
+      position: -0.25
       gain: 30
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.400000006
+      position: -0.25
       gain: 30
       torque: 100
     - id: R_KNEE
