--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -18,14 +18,14 @@ eta:
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: [0.2, 0.2, 1.75]
+  freq: [0.7, 0.2, 1.75]
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: [0.3, 0.1, 0.55]
+  double_support_ratio: [0.55, 0.1, 0.6]
   foot:
     # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
-    distance: [0.15, 0.14, 0.3]
+    distance: [0.28, 0.14, 0.3]
     # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
     rise: [0.15, 0.05, 0.17]
@@ -44,7 +44,7 @@ walk:
     y_offset: [-0.01, 0.02, 0.02]
     # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
-    swing: [0.03, 0.2, 0.05]
+    swing: [0.03, 0.02, 0.05]
     # Trunk swing pause length in phase at apex (how long we keep the trunk at the max swing position, before swinging back)
     # (half cycle ratio, [0:1])
     pause: [0.1, 0.0, 0.2]
@@ -56,3 +56,11 @@ walk:
 gains:
   legs: 13
   arms: 13
+
+arms:
+  right_shoulder_pitch: 1.98
+  left_shoulder_pitch: 1.85
+  right_shoulder_roll: -0.176
+  left_shoulder_roll: 0.135
+  right_elbow: -1.57
+  left_elbow: -1.57
