--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -29,32 +29,12 @@ searches:
     search_type: "LOST"
     #Points in absolute angle (degrees) relative to the horizon and x-xis of robot
     points:
-      - [0, 5]
-      - [5, 45]
-      - [10, 5]
-      - [0, 45]
-      - [-10, 5]
-      - [-5, 45]
-      - [0, 0]
-      #- [0, -45]
-      #- [0, 0]
-      #- [0, 30]
-      #- [-45, -15]
-      #- [-45, -30]
-      #- [-120, -30]
-      #- [-50, -15]
-      #- [-30, 30]
-      #- [0, 30]
-      #- [-20, -30]
-      #- [0, -60]
-      #- [20, -30]
-      #- [0, 0]
-      #- [0, 30]
-      #- [30,  30]
-      #- [50,  -15]
-      #- [120,  -30]
-      #- [45,  -15]
-      #- [45, -30]
+      - [0, 5]   # Forward and slightly down
+      - [5, 45]  # Slightly to the side and down
+      - [10, 5]  # To the side and slightly down
+      - [0, 45]  # Forward and down
+      - [-10, 5] # To the side and slightly down
+      - [-5, 45] # Slightly to the side and down
   - search_type: "FIND_ADDITIONAL_OBJECTS"
     #Points for this search are relative to the padded bounding box containing the already visible objects
     points:
@@ -66,7 +46,7 @@ searches:
       - [-1,0]
   - search_type: "GOAL_SEARCH"
     points:
-      - [-0.4,0]
+      - [-0.4,1]
       - [0, 1]
       - [0.4, 1]
   - search_type: "GOAL_LEFT"
