Update optimiser and evaluator config for the tuned walk

--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -1,9 +1,9 @@
-population_size: 40
-num_generations: 300
+population_size: 4
+num_generations: 5
 num_objectives: 2
 num_constraints: 2
 num_real_vars: 2
-seed: 666
+seed: 7777777
 probabilities:
   real:
     crossover: 0.8
@@ -18,17 +18,17 @@ eta:
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: [0.7, 0.2, 1.75]
+  freq: [3, 1.5, 3.5]
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: [0.55, 0.1, 0.6]
+  double_support_ratio: [0.1, 0.05, 0.2]
   foot:
     # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
-    distance: [0.28, 0.14, 0.3]
+    distance: [0.18, 0.12, 0.24]
     # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
-    rise: [0.15, 0.05, 0.17]
+    rise: [0.075, 0.05, 0.17]
   trunk:
     # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
     # (in m, > 0)
@@ -59,8 +59,8 @@ gains:
 
 arms:
   right_shoulder_pitch: 1.98
-  left_shoulder_pitch: 1.85
+  left_shoulder_pitch: 1.98
   right_shoulder_roll: -0.176
-  left_shoulder_roll: 0.135
-  right_elbow: -1.57
-  left_elbow: -1.57
+  left_shoulder_roll: 0.176
+  right_elbow: -1
+  left_elbow: -1
