--- a/module/vision/BallDetector/data/config/BallDetector.yaml
+++ b/module/vision/BallDetector/data/config/BallDetector.yaml
@@ -1,3 +1,6 @@
+# Controls the minimum log level that NUClear log will display
+log_level: DEBUG
+
 confidence_threshold: 0.7            # How confident do we need to be that this is a ball point
 cluster_points: 3                    # How many points do we need to claim this cluster is a viable ball
 minimum_ball_distance: 0.20          # Balls closer than this distance can't possibly be balls
@@ -6,4 +9,3 @@ distance_disagreement: 0.30          # Percentage difference between width and p
 maximum_deviation: 0.17              # A threshold on how large the standard deviation of the angle between ray and
                                      # cone axis can be
 ball_angular_cov: [0.01, 0.01, 0.01]  # Measurement certainties
-debug: false                         # Turn on debug outputs
