--- a/module/vision/GoalDetector/data/config/GoalDetector.yaml
+++ b/module/vision/GoalDetector/data/config/GoalDetector.yaml
@@ -1,5 +1,5 @@
 # Log level of DEBUG will print out compression rates
-log_level: INFO
+log_level: DEBUG
 
 confidence_threshold: 0.6             # How confident do we need to be that this is a goal point
 cluster_points: 5                     # How many points do we need to claim this cluster is a viable goal
