Added better comments

--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -28,13 +28,14 @@ searches:
   - #enum type for search
     search_type: "LOST"
     #Points in absolute angle (degrees) relative to the horizon and x-xis of robot
+    #Searches right then left, crossing back through the front each time
     points:
-      - [0, 5]   # Forward and slightly down
-      - [5, 45]  # Slightly to the side and down
-      - [10, 5]  # To the side and slightly down
-      - [0, 90]  # Forward and down
-      - [-10, 5] # To the side and slightly down
-      - [-5, 45] # Slightly to the side and down
+      - [0, 5]
+      - [5, 45]
+      - [10, 5]
+      - [0, 90]
+      - [-10, 5]
+      - [-5, 45]
   - search_type: "FIND_ADDITIONAL_OBJECTS"
     #Points for this search are relative to the padded bounding box containing the already visible objects
     points:
@@ -46,7 +47,8 @@ searches:
       - [-1,0]
   - search_type: "GOAL_SEARCH"
     points:
-      - [-0.4,0]
+      #Searches left to right
+      - [-0.4,1]
       - [0, 1]
       - [0.4, 1]
   - search_type: "GOAL_LEFT"
