--- a/module/support/logging/DataLogging/data/config/DataLogging.yaml
+++ b/module/support/logging/DataLogging/data/config/DataLogging.yaml
@@ -1,6 +1,7 @@
 output:
   directory: log
   split_size: 5 * GiB
+  max_size: 10630044057 # 10 gigabytes
 
 # You can put any messages that is emitted in the system here and it will be logged
 # The below ones are just the most common and here as an example
