--- a/module/support/logging/DataLogging/data/config/webotsrobocup/DataLogging.yaml
+++ b/module/support/logging/DataLogging/data/config/webotsrobocup/DataLogging.yaml
@@ -1,7 +1,7 @@
 output:
   directory: log
   split_size: 5 * GiB
-  max_size: 10630044057
+  max_size: 10630044057 # In robocup2021 we've got a limit of 10 gigs
 # You can put any messages that is emitted in the system here and it will be logged
 messages:
   message.output.CompressedImage: true
