--- a/module/support/logging/FileLogHandler/data/config/FileLogHandler.yaml
+++ b/module/support/logging/FileLogHandler/data/config/FileLogHandler.yaml
@@ -1,2 +1,3 @@
 log_file: /home/nubots/NUbots/log/log
-max_size: 10630044057 # 10 gigabytes
+# 10 gigabytes, this was set for robocup2021, its useful for when we have limited file system sizes
+max_size: 10630044057 
