--- a/module/support/logging/FileLogHandler/data/config/FileLogHandler.yaml
+++ b/module/support/logging/FileLogHandler/data/config/FileLogHandler.yaml
@@ -1,3 +1,3 @@
 log_file: /home/nubots/NUbots/log/log
 # 10 gigabytes, this was set for robocup2021, its useful for when we have limited file system sizes
-max_size: 10630044057 
+max_size: 10630044057 # This number should be slightly less than the actual max size because we only check file size every 5 seconds
