--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
@@ -1,6 +1,7 @@
-forwardSpeed: 0.01
+forwardSpeed: 0.1
 sideSpeed: 0.01
 turnSpeed : 0.08
+walkToReadySpeed: 0.05
 slow_approach_factor: 0.01
 a: 7
 b: 0
