--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -1,3 +1,5 @@
+log_level: WARN
+
 #The angular padding to place between an object and the edge of the screen as a fraction of the largest field of view
 fractional_view_padding: 0.1
 
