--- a/module/vision/BallDetector/data/config/BallDetector.yaml
+++ b/module/vision/BallDetector/data/config/BallDetector.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: WARN
 
 confidence_threshold: 0.7            # How confident do we need to be that this is a ball point
 cluster_points: 3                    # How many points do we need to claim this cluster is a viable ball
