--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
@@ -1,7 +1,9 @@
 forwardSpeed: 0.1
 sideSpeed: 0.1
 turnSpeed : 0.08
-walkToReadySpeed: 0.05
+walkToReadySpeedX: 0.05
+walkToReadySpeedY: 0.025
+walkToReadyRotation: 0.075
 slow_approach_factor: 0.01
 a: 7
 b: 0
