--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -8,8 +8,11 @@ if(test_src)
   set_target_properties(TestShared PROPERTIES FOLDER "shared/tests")
 
   # Add warnings. Use the default ROLE warnings setting if it's not configured manually
-  if(NOT NUCLEAR_UTILITY_WARNINGS)
-    set(NUCLEAR_UTILITY_WARNINGS ${NUCLEAR_ROLE_WARNINGS})
+  if(NOT DEFINED NUCLEAR_UTILITY_WARNINGS)
+    set(NUCLEAR_UTILITY_WARNINGS
+        ${NUCLEAR_ROLE_WARNINGS}
+        CACHE STRING "Compiler warnings used during utility test compilation"
+    )
   endif()
   target_compile_options(TestShared PRIVATE ${NUCLEAR_UTILITY_WARNINGS})
 
