--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ if(test_src)
   # Add warnings. Use the default ROLE warnings setting if it's not configured manually
   if(NOT DEFINED NUCLEAR_UTILITY_WARNINGS)
     set(NUCLEAR_UTILITY_WARNINGS
-        ${NUCLEAR_ROLE_WARNINGS}
+        ${NUCLEAR_ROLES_WARNINGS}
         CACHE STRING "Compiler warnings used during utility test compilation"
     )
   endif()
