Move compiler warnings settings to target level for modules (#479)
* Apply the warnings to modules instead of globally

* Consolidates warnings into one list so we can do one CI_BUILD to check our builds locally

* Moves the compiler warnings function into nuclear/cmake

* Change camera config field names back to PascalCase (#480)

* Code review - Alex's suggestions

* Changes default WARNINGS_AS_ERRORS setting

* Added compiler warnings for messages, extensions, and utilities

* Fixes formatting on d.ts files (#483)

* Moves extension and utility warning application to their libraries.cmake files

* Removes $NUBOTS_ROOT/cmake from the module path, because it wasn't needed any more

* formatting lel

* Revert "Merge remote-tracking branch 'origin/master' into hamiltons/compiler_warnings_changes"

This reverts commit e5bff3b8170aa75f065977815adb41f6029dd450.

* Revert "Merge remote-tracking branch 'origin/master' into biddulph/compiler-warnings"

This reverts commit e09d638ec2d2dfaab0131215220b9725bfea4fab.

* Adds warnings for module and utility tests

* Removes redundant module path additions

* Formatting

* Removes warnings from conversiontest

* Removes shadowed variable in FileWatcherTest

* Fixes test warnings

* Removes gcc-only warnings clang-tidy gets

* Deletes function file for warnings

* Moves warnings to main cmake file with configurable variable

* Moves warning setting into nuclear directory, with separate warnings for each component

* Formatting

* Suggestion from alex I forgot to push

* Refines the setting of the warnings variables

* Introduces many casts so we do signed arithmetic without warnings

* More signedness changes on TestSplines

* Removes bad warning which warns on int indices

* Responds to trent's review

* Formatting

* Screaming snakes for shadowed var

* Makes constants screaming snake case

* Makes servo indices ints in `Convert`

Co-authored-by: Josephus P

--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -7,6 +7,15 @@ if(test_src)
 
   set_target_properties(TestShared PROPERTIES FOLDER "shared/tests")
 
+  # Add warnings. Use the default ROLE warnings setting if it's not configured manually
+  if(NOT DEFINED NUCLEAR_UTILITY_WARNINGS)
+    set(NUCLEAR_UTILITY_WARNINGS
+        ${NUCLEAR_ROLES_WARNINGS}
+        CACHE STRING "Compiler warnings used during utility test compilation"
+    )
+  endif()
+  target_compile_options(TestShared PRIVATE ${NUCLEAR_UTILITY_WARNINGS})
+
   # Add the test
   add_test(
     NAME TestShared
