Changes permissions of role dir in pipeline commands

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -54,7 +54,13 @@ steps:
   - label: "Build generic and Test"
     # We have to configure twice. The first configuration generates the cache for `./b unused`, then the next one
     # turns on the role which `./b unused -g` generates
-    command: "./b configure -- -DBUILD_TESTS=ON && ./b unused -g && ./b configure && ./b build && ./b tests run"
+    command:
+      - sudo chmod 777 roles # Required to let ./b unused write the role file
+      - ./b configure -- -DBUILD_TESTS=ON
+      - ./b unused -g
+      - ./b configure
+      - ./b build
+      - ./b tests run
     plugins:
       - docker-compose#v3.0.3:
           config: .buildkite/NUbots/docker-compose.yml
