--- a/nusight2/.babelrc
+++ b/nusight2/.babelrc
@@ -7,7 +7,6 @@
         "legacy": true
       }
     ],
-    "@babel/plugin-syntax-jsx",
-    "react-hot-loader/babel"
+    "@babel/plugin-syntax-jsx"
   ]
 }
