--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -56,6 +56,7 @@
     "@types/extract-text-webpack-plugin": "3.0.6",
     "@types/html-webpack-plugin": "3.2.6",
     "@types/jest": "26.0.24",
+    "@types/mini-css-extract-plugin": "^2.0.1",
     "@types/minimist": "1.2.2",
     "@types/node": "16.4.0",
     "@types/nodemon": "1.19.1",
@@ -94,6 +95,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.6",
     "jest-css-modules": "2.1.0",
+    "mini-css-extract-plugin": "2.1.0",
     "nodemon": "2.0.12",
     "postcss": "8.3.5",
     "postcss-browser-reporter": "0.6.0",
